--- a/finalproject/src/main/resources/application.properties
+++ b/finalproject/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5434/postgres
 spring.datasource.username = postgres
 spring.datasource.password = bondstone
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+server.port = 8888
